--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -6,7 +6,7 @@
         id: voyage.id, 
         image: voyage.image,
         city: voyage.city,
-        country: voyage.country, 
+        q: voyage.country, 
       }"
     >
       <img src="{{ voyage.image }}" alt="Image de {{ voyage.country }}" />
