--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,73 +1,60 @@
-section {
-    min-height: 2607px;
-    min-width: 157px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+section{
     position:fixed;
+    top: 0; 
     left: 0;
+    height: 100%;
+    width: 157px;
     background-color: var(--bege);
+    display: flex;
+    justify-content: center;
+  
+   
+   
 }
 .container {
     transform: rotate(-90deg);
     display: flex;
     flex-direction: row;
-    margin-top: 100px;
-}
+    align-items: center; 
+    margin-top: -50px; 
+   
+ 
+    
 
-.barre-verticale {
-    width: 1px; 
-    height: 154px;
-    background-color: var(--noir);
-    margin-left: -100px;
 }
-
-.barre-verticale1 {
-margin-left: -470px;
-}
-
 p {
     font-family: var(--Inter);
     font-size: 30px;
     font-weight: 400;
     font-style: normal;
     line-height: 36px;
-    padding-top: 50px;
-    margin-left: 19px;
-    /* pour rester sur la même ligne */
+     margin-left: -30px;
+   /* pour rester sur la même ligne */
     white-space: nowrap;
+   
 }
+ .textTemp{
+    font-family: var(--Inter);
+    font-size: 30px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 36px;
+    margin-right: 50px;
+}
+
+.barre-verticale, .barre-verticale1  {
+    width: 1px; 
+    height: 154px;
+    background-color: var(--noir);
+   display: flex;
+   margin-right: 40px;
+}
+
+.barre-verticale{
+    margin-right: 90px;
+}
+
 
 .tempText {
     margin-left: -100px;
-}
-@media screen and (max-width: 500px) {
-    section {
-        width: 100%;
-        height: 154px;
- }
-    .container {
-        transform: rotate(0deg);
-    }
-    p {
-        font-size: 16px;
-        line-height: 19px;
-    }
-}
-
-
-@media screen and (max-width: 390px) {
-    section {
-        width: 100%;
-        height: 154px;
- }
-    
-    .container {
-        
-        transform: rotate(0deg);
-    }
-    p {
-        font-size: 16px;
-        line-height: 19px;
-    }
 }
